Fix for tech spec images beings stretched on product pages and adding interiors guide PDF link from Summit page

--- a/wp-content/themes/studio-shed-child/css/product.css
+++ b/wp-content/themes/studio-shed-child/css/product.css
@@ -546,7 +546,8 @@ a.but {
     text-align: center;
 }
 .product-header-img img {
-    width: 120px;
+    width: auto;
+    height: auto;
 }
 
 .one_half ul, .tab-left ul, .tab-right ul, #feature-1 .product-center ul {
